--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,14 +12,7 @@ build_pdf:
     - FILES="README.md INSTALLATION.md"
     - if ls docs/*.md >/dev/null 2>&1; then FILES="$FILES docs/*.md"; fi
     - if ls docs/tagesdoku/*.md >/dev/null 2>&1; then FILES="$FILES docs/tagesdoku/*.md"; fi
-    - pandoc $FILES -s --toc \
-        --pdf-engine=xelatex \
-        -V lang=de \
-        -V mainfont="DejaVu Serif" \
-        -V sansfont="DejaVu Sans" \
-        -V monofont="DejaVu Sans Mono" \
-        --resource-path=".:docs:docs/img" \
-        -o projekt-doku.pdf
+    - pandoc $FILES -s --toc --pdf-engine=xelatex -V lang=de -V mainfont="DejaVu Serif" -V sansfont="DejaVu Sans" -V monofont="DejaVu Sans Mono" --resource-path=".:docs:docs/img" -o projekt-doku.pdf
   artifacts:
     when: always
     paths:
